@@ -245,6 +245,7 @@
       <class name="test.listeners.github1296.GitHub1296Test"/>
       <class name="test.listeners.github1465.IssueTest"/>
       <class name="test.listeners.github2385.IssueTest"/>
+      <class name="test.listeners.github2522.IssueTest"/>
     </classes>
   </test>
 
